docs: add `alts` and `tapestry.queue` to Readme
Update the documentation to the latest version.